k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
  labels:
    app.kubernetes.io/name: 'n8n'
    app.kubernetes.io/env: 'dev'
    app.kubernetes.io/version: 'latest'
    app.kubernetes.io/part-of: 'n8n'
