k8s/01-postgres-statefulset.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
  labels:
    app.kubernetes.io/name: 'n8n'
    app.kubernetes.io/env: 'dev'
    app.kubernetes.io/version: 'latest'
    app.kubernetes.io/part-of: 'n8n'
---

apiVersion: v1
kind: Service
metadata:
  name: n8n-postgres
  namespace: n8n
  labels:
    app.kubernetes.io/name: 'postgres'
    app.kubernetes.io/env: 'dev'
    app.kubernetes.io/version: '14.8'
    app.kubernetes.io/part-of: 'n8n'
spec:
  selector:
    app.kubernetes.io/name: 'postgres'
    app.kubernetes.io/env: 'dev'
    app.kubernetes.io/version: '14.8'
    app.kubernetes.io/part-of: 'n8n'
  ports:
  - name: n8n-postgres
    protocol: TCP
    port: 5432
    targetPort: 5432
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: n8n-postgres
  namespace: n8n
  labels:
    app.kubernetes.io/name: 'postgres'
    app.kubernetes.io/env: 'dev'
    app.kubernetes.io/version: '14.8'
    app.kubernetes.io/part-of: 'n8n'
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: 'postgres'
      app.kubernetes.io/env: 'dev'
      app.kubernetes.io/version: '14.8'
      app.kubernetes.io/part-of: 'n8n'
  serviceName: n8n-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: 'postgres'
        app.kubernetes.io/env: 'dev'
        app.kubernetes.io/version: '14.8'
        app.kubernetes.io/part-of: 'n8n'
    spec:
      containers:
      - name: n8n-postgres
        image: postgres:14
        imagePullPolicy: IfNotPresent
        ports:
        - name: n8n-postgres
          containerPort: 5432
          protocol: TCP
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
          subPath: postgres
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      storageClassName: standard
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
