k8s/02-n8n-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-service
  namespace: n8n
  labels:
    app.kubernetes.io/name: 'n8n'
    app.kubernetes.io/env: 'dev'
    app.kubernetes.io/version: 'latest'
    app.kubernetes.io/part-of: 'n8n'
spec:
  selector:
    app.kubernetes.io/name: 'n8n'
    app.kubernetes.io/env: 'dev'
    app.kubernetes.io/version: 'latest'
    app.kubernetes.io/part-of: 'n8n'
  ports:
  - name: n8n-http
    port: 80
    targetPort: 5678
    protocol: TCP
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-deployment
  namespace: n8n
  labels:
    app.kubernetes.io/name: 'n8n'
    app.kubernetes.io/env: 'dev'
    app.kubernetes.io/version: 'latest'
    app.kubernetes.io/part-of: 'n8n'
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: 'n8n'
      app.kubernetes.io/env: 'dev'
      app.kubernetes.io/version: 'latest'
      app.kubernetes.io/part-of: 'n8n'
  template:
    metadata:
      labels:
        app.kubernetes.io/name: 'n8n'
        app.kubernetes.io/env: 'dev'
        app.kubernetes.io/version: 'latest'
        app.kubernetes.io/part-of: 'n8n'
    spec:
      containers:
      - name: n8n
        image: n8nio/n8n:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: n8n-http
          containerPort: 5678
        resources:
          limits:
            cpu: "1.0"
            memory: "1024Mi"
          requests:
            cpu: "0.5"
            memory: "512Mi"
